--- a/src/imgui.ini
+++ b/src/imgui.ini
@@ -1,22 +1,21 @@
+[Window][DockSpaceViewport_11111111]
+Pos=0,0
+Size=1473,803
+Collapsed=0
+
 [Window][Debug##Default]
 Pos=60,60
 Size=400,400
 Collapsed=0
 
-[Window][B]
-Pos=653,64
-Size=345,247
+[Window][Setings]
+Pos=1158,0
+Size=315,803
 Collapsed=0
-
-[Window][A]
-Pos=-23,-49
-Size=238,184
-Collapsed=0
-
-[Window][Dear ImGui Demo]
-Pos=650,20
-Size=550,680
-Collapsed=0
+DockId=0x00000002,0
 
 [Docking][Data]
+DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1473,803 Split=X
+  DockNode  ID=0x00000001 Parent=0x8B93E3BD SizeRef=883,720 CentralNode=1
+  DockNode  ID=0x00000002 Parent=0x8B93E3BD SizeRef=315,720 Selected=0x0776A6B5
 
