--- a/src/imgui.ini
+++ b/src/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceViewport_11111111]
 Pos=0,0
-Size=1473,803
+Size=1200,720
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,13 +9,10 @@ Size=400,400
 Collapsed=0
 
 [Window][Setings]
-Pos=1158,0
-Size=315,803
+Pos=871,52
+Size=245,171
 Collapsed=0
-DockId=0x00000002,0
 
 [Docking][Data]
-DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1473,803 Split=X
-  DockNode  ID=0x00000001 Parent=0x8B93E3BD SizeRef=883,720 CentralNode=1
-  DockNode  ID=0x00000002 Parent=0x8B93E3BD SizeRef=315,720 Selected=0x0776A6B5
+DockSpace ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1200,720 CentralNode=1
 
